# pandanet-tweaker

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
docs/: pandanet-assets.md  pandanet-js-patches.md  plan.md
src/pandanet_theme_replacer/: __init__.py  __main__.py  assets.py  cache.py  cli.py  errors.py  models.py  pipeline.py  theme_sources.py
src/pandanet_theme_replacer/importers/: __init__.py  sabaki.py
src/pandanet_theme_replacer/packaging/: asar.py
src/pandanet_theme_replacer/targets/: pandanet.py
src/pandanet_tweaker/: __init__.py  __main__.py  assets.py  cli.py  errors.py  models.py  pipeline.py  theme_sources.py
src/pandanet_tweaker/importers/: sabaki.py
src/pandanet_tweaker/packaging/: __init__.py  asar.py
src/pandanet_tweaker/targets/: __init__.py  pandanet.py
tests/: __init__.py  test_asar_packaging.py  test_cli.py  test_pandanet_targets.py  test_pipeline.py  test_sabaki.py
