[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandanet-tweaker"
version = "0.1.0"
description = "Repack the Pandanet Go client app.asar with a custom board theme."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
    "asar @ git+https://github.com/lykahb/asar-py.git",
]

[project.scripts]
pandanet-tweaker = "pandanet_tweaker.cli:main"

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pandanet_tweaker"]
