[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandanet-tweaker"
version = "0.1.0"
description = "Restyle the Pandanet desktop client with custom boards and stones."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Borys Lykah" }]
dependencies = [
    "asar @ git+https://github.com/lykahb/asar-py.git",
]

[project.scripts]
pandanet-tweaker = "pandanet_tweaker.cli:main"

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pandanet_tweaker"]
